--- a/Portfolio.html
+++ b/Portfolio.html
@@ -70,9 +70,30 @@
             </ul>
           </div>
         </div>
-        <div class="pen pen01"></div>
-        <div class="pen pen02"></div>
-        <div class="pen pen03"></div>
+        <div class="pen pen01">
+          <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/1f22631f521ef15115ce6d9b5612038dd4f09782/%ED%8C%8C%EB%9E%91%EC%83%89%EB%A7%88%EC%B9%B4.png" alt="">
+        </div>
+        <div class="pen pen02">
+          <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/1f22631f521ef15115ce6d9b5612038dd4f09782/%EC%B4%88%EB%A1%9D%EC%83%89%EC%97%B0%ED%95%84.png" alt="">
+        </div>
+        <div class="pen pen03">
+          <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/1f22631f521ef15115ce6d9b5612038dd4f09782/%EC%A3%BC%ED%99%A9%EC%83%89%EC%97%B0%ED%95%84.png" alt="">
+        </div>
+        <div class="pen pen04">
+          <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/1f22631f521ef15115ce6d9b5612038dd4f09782/%EC%97%B0%ED%95%84.png" alt="">
+        </div>
+        <div class="pen pen05">
+          <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/1f22631f521ef15115ce6d9b5612038dd4f09782/%EB%B9%A8%EA%B0%95%EC%83%89%EC%97%B0%ED%95%84.png" alt="">
+        </div>
+        <div class="pen pen06">
+          <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/1f22631f521ef15115ce6d9b5612038dd4f09782/%EB%B9%A8%EA%B0%95%EC%83%89%EB%A7%88%EC%B9%B4.png" alt="">
+        </div>
+        <div class="pen pen07">
+          <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/1f22631f521ef15115ce6d9b5612038dd4f09782/%EB%B3%B4%EB%9D%BC%EC%83%89%EC%97%B0%ED%95%84.png" alt="">
+        </div>
+        <div class="pen pen08">
+          <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/1f22631f521ef15115ce6d9b5612038dd4f09782/%EB%85%B8%EB%9E%80%EC%83%89%EC%97%B0%ED%95%84.png" alt="">
+        </div>
       </div>
       <div class="content content2 personal-data">
         <div class="main-txt">
@@ -438,9 +459,30 @@
             </ul>
           </div>
         </div>
-        <div class="pen pen01"></div>
-        <div class="pen pen02"></div>
-        <div class="pen pen03"></div>
+        <div class="pen pen01">
+          <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/1f22631f521ef15115ce6d9b5612038dd4f09782/%ED%8C%8C%EB%9E%91%EC%83%89%EB%A7%88%EC%B9%B4.png" alt="">
+        </div>
+        <div class="pen pen02">
+          <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/1f22631f521ef15115ce6d9b5612038dd4f09782/%EC%B4%88%EB%A1%9D%EC%83%89%EC%97%B0%ED%95%84.png" alt="">
+        </div>
+        <div class="pen pen03">
+          <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/1f22631f521ef15115ce6d9b5612038dd4f09782/%EC%A3%BC%ED%99%A9%EC%83%89%EC%97%B0%ED%95%84.png" alt="">
+        </div>
+        <div class="pen pen04">
+          <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/1f22631f521ef15115ce6d9b5612038dd4f09782/%EC%97%B0%ED%95%84.png" alt="">
+        </div>
+        <div class="pen pen05">
+          <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/1f22631f521ef15115ce6d9b5612038dd4f09782/%EB%B9%A8%EA%B0%95%EC%83%89%EC%97%B0%ED%95%84.png" alt="">
+        </div>
+        <div class="pen pen06">
+          <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/1f22631f521ef15115ce6d9b5612038dd4f09782/%EB%B9%A8%EA%B0%95%EC%83%89%EB%A7%88%EC%B9%B4.png" alt="">
+        </div>
+        <div class="pen pen07">
+          <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/1f22631f521ef15115ce6d9b5612038dd4f09782/%EB%B3%B4%EB%9D%BC%EC%83%89%EC%97%B0%ED%95%84.png" alt="">
+        </div>
+        <div class="pen pen08">
+          <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/1f22631f521ef15115ce6d9b5612038dd4f09782/%EB%85%B8%EB%9E%80%EC%83%89%EC%97%B0%ED%95%84.png" alt="">
+        </div>
       </div>
     </div>
   </div>
