--- a/Portfolio.html
+++ b/Portfolio.html
@@ -56,8 +56,17 @@
       <div class="content content1 first-chapter">
         <div class="diary row">
           <div class="left cell">
-            <div class="left-img"></div>
-            <div class="right-img"></div>
+            <div class="year row">
+              <div class="top row">
+                <div class="box cell">1</div>
+                <div class="box cell">9</div>
+              </div>
+              <div class="bottom row">
+                <div class="box cell">9</div>
+                <div class="box cell">9</div>
+              </div>
+            </div>
+            <div class="comment">나만의 기록</div>
           </div>
           <div class="menu cell">
             <ul>
@@ -185,15 +194,15 @@
               <div class="txt-wrap">
                 <div class="txt-bar row">
                   <div class="box cell"></div>
-                  <div class="txt cell">2021.05 ~ 2021.12 <br> SBS아카데미 컴퓨터학원 <br> 웹 디자이너 과정 수료</div>
+                  <div class="txt cell">21.05 ~ 21.12 <br> SBS아카데미 컴퓨터학원 <br> 웹 디자이너 과정 수료</div>
                 </div>
                 <div class="txt-bar row">
                   <div class="box cell"></div>
-                  <div class="txt cell">2018.03. ~ 2021.04. <br> 한강라이프 경영지원실 주임 </div>
+                  <div class="txt cell">18.03. ~ 21.04. <br> 한강라이프 경영지원실 주임 </div>
                 </div>
                 <div class="txt-bar row">
                   <div class="box cell"></div>
-                  <div class="txt cell">2018.02 <br> 대전대성여자고등학교 졸업 </div>
+                  <div class="txt cell">18.02 <br> 대전대성여자고등학교 졸업 </div>
                 </div>
               </div>
             </div>
@@ -237,9 +246,9 @@
         <div class="diary-wrap">
           <div class="paper row">
             <div class="txt-wrap row">
-              <div class="day-box cell">2021.10.18</div>
+              <div class="day-box cell">21.10.18.</div>
               <div class="box cell">~</div>
-              <div class="day-box cell">2021.11.02</div>
+              <div class="day-box cell">21.11.02.</div>
             </div>
             <div class="information-wrap">
               <div class="left-wrap cell">
@@ -447,7 +456,14 @@
       </div>
       <div class="content content8 last-chapter">
         <div class="diary row">
-          <div class="left cell"></div>
+          <div class="left cell">
+            <div class="left-img">
+              <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/664b47d5c0fdad84746321bfb86cf054d7d2f88e/last-chapter-img-02.png" alt="">
+            </div>
+            <div class="right-img">
+              <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/664b47d5c0fdad84746321bfb86cf054d7d2f88e/last-chapter-img01.png" alt="">
+            </div>
+          </div>
           <div class="menu">
             <ul>
               <li class="move01"><a href="#">PERSOMAL <br> DATA</a></li>
