--- a/Portfolio.html
+++ b/Portfolio.html
@@ -109,7 +109,9 @@
           <div class="right">D A T A</div>
           <div class="left">P E R S O N A L</div>
         </div>
-        <div class="img-box"></div>
+        <div class="img-box">
+          <img src="https://raw.githubusercontent.com/leeyoounjung/Portfolio/9fae728144594abe41715d3c361b386e1ea47438/personaldata_img.png" alt="">
+        </div>
         <div class="data-box">
           <div class="txt-wrap">
             <div class="txt-bar row">
